--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       <!-- to here  -->
 
       <!-- paste what you copied directly below here -->
+      <div class="about">
+        <div class="bio-left">
+          <img src="rosie-the-kraken.png"/>
+        </div>
+        <div class="bio-right">
+          <h2>Anylooks_Puc</h2>
+          <p> We're Any, Noemi and Ilse, and we are the Krakens! In the 1940s, I encouraged women to join the World War II effort in the United States. Since then, I have become a  symbol of women participating in all sorts of industries where they are underrepresented. We can do it! </p>
+        </div>
+      </div>
 
 
   </main>
